Resources/Public/Media/StyleSheets/Vidi.css
/* - - - - - - - - - - - - - - - - - - - - -
Newsletter style

$Id: newsletter.css 37081 2010-08-21 11:26:34Z fabien_u $
- - - - - - - - - - - - - - - - - - - - - */


.x-btn-default-toolbar-small {
	border-color: #9D9D9D;
	background-color: #F3F3F3;
}




.x-tree-node-collapsed .x-tree-node-icon ,
.x-tree-node-expanded .x-tree-node-icon,
.x-tree-node-leaf .x-tree-node-icon {
	background-image: url(../Icons/concept.png) !important;
}

.typo3-fullDoc,
.typo3-fullDoc .x-panel-bwrap,
.typo3-fullDoc .x-panel-body {
	height: 100%;
}

.typo3-docheader-row2 {
	background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAABCAYAAAAb4BS0AAAAGElEQVR42gENAPL/AMjIyEzIyMizyMjI/zhvCQelaHPPAAAAAElFTkSuQmCC");
	background-position: right;
	background-repeat: repeat-y;
}

.typo3-docheader-row1 {
	background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAABCAYAAAAb4BS0AAAAGElEQVR42gENAPL/AEBAQExAQECzQEBA/xb3BD8CHBN0AAAAAElFTkSuQmCC");
	background-position: right;
	background-repeat: repeat-y;
}

.typo3-docheader-row1 {
	background-color: #585858;
	height: 22px;
}

.typo3-docheader-row2 {
	background-color: #DADADA;
	line-height: 27px;
	height: 21px;
	padding-top: 6px;
}

.x-toolbar,
.x-border-layout-ct,
.x-panel-center
.x-panel-body {
	background-color: #F8F8F8;
	background-image: none;
}

#t3-vidi-menu .x-btn {
	padding-right: 20px;
}

.t3-vidi-button-planner {
	background-image: url(../images/icons/ext_icon.png) !important;
}

.t3-vidi-button-statistics {
	background-image: url(../images/icons/chart_bar.png) !important;
}

#newsletterListMenu {
	margin-bottom: 10px;
}

.t3-vidi-span-statistic {
	font-size: 120%;
	margin-bottom: 10px;
}

.t3-vidi-span-statistic span{
	font-weight: bold;
	font-size: 150%;
}

.t3-vidi-span-statistic-sent {
	/*color: #83CAFF;*/
	color: #000;
}

.t3-vidi-span-statistic-opened {
	color: #078207;
}

.t3-vidi-span-statistic-not-opened {
	color: #25CDF2;
}

.t3-vidi-span-statistic-bounced {
	color: #FFAA3C;
}

#loading-mask {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: #000;
     z-index: 10;
	 opacity: 0.4;
}

#loading {
     position: absolute;
     top: 40%;
     left: 45%;
     z-index: 12;
}

#loading span {
     background: url(../images/icons/loading.png) no-repeat left center;
     padding: 5px 30px;
     display: block;
}

.t3-vidi-div-no-statistics {
	margin-top: 30px;
	font-size: 12pt;
}

.t3-vidi-img-no-statistics {
	margin-top: 30px;
	margin-left: 80px;
}

.t3-vidi-hidden {
	display: none;
}

li.x-item-selected {
	background-color:#ff8;
}

div.t3-vidi-filterManager {
	padding: 5px;
}

div.t3-vidi-filterManager h3 {
	border-bottom: 1px dashed black;
}


div.t3-vidi-filterManager ul {
	padding-left:15px;
}

div.t3-vidi-filterManager ul li {
	padding: 2px;
	list-style: outside disc;
	line-height: 1.5em;
}

